--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html ng-app>
+<head>
+	<title><%= title %></title>
+	<link rel='stylesheet' href='/stylesheets/style.css'/>
+</head>
+<body ng-controller="mainController">
+<h1><%= title %></h1>
+
+<p>Welcome to <%= title %></p>
+
+<p>{{1+2}}</p>
+
+
+<p ng-repeat="thing in things">{{thing}}</p>
+</body>
 </html>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.5/angular.js"></script>
+<script>
+	function mainController($scope) {
+		$scope.things = ['thing1', 'thing2'];
+	}
+</script>
